tests/baselines/reference/es6ExportAssignment.errors.txt
tests/cases/compiler/es6ExportAssignment.ts(3,1): error TS1192: Deprecated syntax


==== tests/cases/compiler/es6ExportAssignment.ts (1 errors) ====
    
    var a = 10;
    export = a;
    ~~~~~~~~~~~
!!! error TS1192: Deprecated syntax